<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_game"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewDuck"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/duck"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="239dp" />

    <ImageView
        android:id="@+id/imageViewCounter"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/duck_hunt_logo"
        android:contentDescription="@string/counter_description" />

    <TextView
        android:id="@+id/textViewCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/pixel"
        android:text="@string/counter_default"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewCounter"
        app:layout_constraintStart_toEndOf="@+id/imageViewCounter"
        app:layout_constraintTop_toTopOf="@+id/imageViewCounter" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/pixel"
        android:text="@string/user_textview_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewTime"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTime"
        app:layout_constraintEnd_toStartOf="@+id/textViewTime"
        app:layout_constraintTop_toTopOf="@+id/textViewTime"
        app:srcCompat="@drawable/timer"
        android:contentDescription="@string/time_description" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixel"
        android:text="@string/textview_time_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8503081447051773/3032619498"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
