<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textViewPosition"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/position_label_string"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textViewHuntedDucks"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/press_start_2p"
        android:gravity="center"
        android:text="@string/ducks_label_string"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPosition"
        app:layout_constraintStart_toEndOf="@+id/textViewPosition"
        app:layout_constraintTop_toTopOf="@+id/textViewPosition" />
    <TextView
        android:id="@+id/textViewRankingUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/player_label_string"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHuntedDucks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewHuntedDucks"
        app:layout_constraintTop_toTopOf="@+id/textViewHuntedDucks" />

</androidx.constraintlayout.widget.ConstraintLayout>
