<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_game"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/title"
        android:contentDescription="@string/app_logo_for_marketing" />

    <EditText
        android:id="@+id/editTextEmailSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="@string/write_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPasswordSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="@string/write_password"
        android:inputType="numberPassword"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailSignUp"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailSignUp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignUp"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonCreateNewUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimaryLight"
        android:fontFamily="@font/pixel"
        android:text="@string/create_new_user_string"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordSignUp"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordSignUp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>
